# kovi-plugin-sticker-saver

./: Cargo.toml  README.md
src/: lib.rs
