[package]
name = "kovi-plugin-sticker-saver"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Your Name <email@example.com>"]
description = "Kovi 的表情包提取插件，支持引用表情包转图片保存。"
categories = ["asynchronous", "chat-bot-plugin"]
repository = "https://github.com/araea/kovi-plugin-sticker-saver"
keywords = ["kovi", "kovi-plugin", "sticker", "image", "onebot"]

[dependencies]
kovi = ">= 0.12"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
